2007-02-02 nowe(S2Dao.PHP5-1.2.0-beta2)

    * modify: 定数値S2DAO_PHP5_USE_COMMENTを削除しました。
        コメントアノテーションを利用する場合は、diconファイルに記述してある
        <property name="useCommentAnnotation">false</property>の値をtrueに変更してください。

2007-01-30 nowel(S2Dao.PHP5-1.2.0-beta1)

    * add: S2Dao_SimpleXmlResultSetHandlerを追加しました。
        通常のbeanクラスからXMLデータを出力します。
        このResultSetを利用するにはxmlwriterのextensionを必要とします。
        ex)
            HogeBean
                propertyHoge => 123
                propertyFoo => 456
                propertyBar => FooBean
                    fooPropertyA => aaa
                    fooPropertyB => bbb
        result)
            <?xml version="1.0" encoding="UTF-8"?>
            <root>
                <hogeBean>
                    <propertyHoge>123</propertyHoge>
                    <propertyFoo>123</propertyFoo>
                    <propertyBar>
                        <fooBean>
                            <fooPropertyA>aaa</fooPropertyA>
                            <fooPropertyB>aaa</fooPropertyB>
                        </fooBean>
                    </propertyBar>
                </hogeBean>
            </root>

2007-01-15 nowel(S2Dao.PHP5-1.2.0-beta1)

    * add: S2Dao_ReturnType interface
        DaoAnnotationReaderから分離しました。
         取得する形式戻り型を設定します。
         - S2Dao_ArrayReturnType
         - S2Dao_JsonReturnType
         - S2Dao_YamlReturnType
         - S2Dao_MapReturnType
         - S2Dao_ListReturnType
         - S2Dao_ObjectReturnType
         - S2Dao_XmlReturnType
         - S2Dao_ReturnTypes
    * add: ReturnType Annotation(CommentAnnotaion時は@type)

2007-01-08 nowel(S2Dao.PHP5-1.2.0-beta1)

    * update: ValueTypeのサポート
        定数使用時にValueTypeアノテーションに対応しました。
          - S2Dao_AtomDateType
          - S2Dao_BooleanType
          - S2Dao_DateType
          - S2Dao_DoubleType
          - S2Dao_IntegerType
          - S2Dao_LobType
          - S2Dao_NullType
          - S2Dao_ObjectType
          - S2Dao_StringType