@@ -133,9 +133,9 @@ class S2Dao_BeanCommentAnnotationReader implements S2Dao_BeanAnnotationReader {
     }
     
     private function getAnnotation($anno = self::Anno){
-        if(S2Container_Annotations::isAnnotationPresent($anno, $this->beanClass->getName())){
-            return S2Container_Annotations::getAnnotation(
-                            $anno, $this->beanClass->getName());
+        $name = $this->beanClass->getName();
+        if(S2Container_Annotations::isAnnotationPresent($anno, $name)){
+            return S2Container_Annotations::getAnnotation($anno, $name);
         }
         return null;
     }
